--- a/style.css
+++ b/style.css
@@ -5,27 +5,230 @@
 
 .container {
   display: grid;
-  grid-template: 1fr 3fr / 1fr 3fr;
-  text-align: center;
+  grid-template: 1fr 5fr / 1fr 3fr;
 }
+
+/* #region sidebar*/
 
 .sidebar {
-  grid-column: 1 / 2;
-  grid-row: 1 / 3;
-background-color: green ;
+  grid-row: span 2;
+
+  display: flex;
+  flex-direction: column;
+  background-image: url("images/universe-double.png");
+  background-size: cover;
+  padding: 5%;
 }
+
+.nav__list,
+.settings__list,
+.logo {
+  padding-bottom: 10%;
+  list-style: none;
+}
+
+.logo__text {
+  font-weight: bold;
+}
+
+.logo__image,
+.nav__item-icon,
+.settings__item-icon {
+  height: 40px;
+  fill: white;
+}
+
+.logo__text,
+.nav__item-text,
+.settings__item-text {
+  padding-left: 5%;
+  color: white;
+}
+
+.logo__link,
+.nav__link,
+.settings__link {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  text-decoration: none;
+}
+
+/* #endregion sidebar*/
+
+/* #region header */
 
 .header {
-  grid-column: 2 / 3;
-  grid-row: 1 / 2;
-  background-color: yellowgreen ;
+  display: grid;
+  align-items: center;
+  gap: 15px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  padding: 2%;
 }
 
-.main-content {
-  background-color: red ;
+.search {
+  grid-column: span 2;
+  display: flex;
+  align-content: center;
+  justify-content: space-around;
 }
 
-/*
 
-background-color: blueviolet ;
-background-color: blue ;
+.search__input,
+.search__button,
+.notification__bell,
+.notification__profile-name {
+  height: 30px;
+  width: 30px;
+}
+
+.search__input {
+  width: 90%;
+  background-color:  rgb(74, 118, 212);
+}
+
+.notification {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.notification__profile-picture {
+  height: 40px;
+  width: 40px;
+}
+
+.notification__profile-name {
+  font-weight: bold;
+}
+
+.profile {
+  display: flex;;
+  align-items: center;
+  grid-column: span 2;
+}
+
+.profile__picture {
+  height: 50px;
+  width: 50px;
+  padding-right: 5%;
+}
+
+.profile__text {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+
+}
+
+.profile__welcome-message,
+.profile__name {
+  font-weight: bold;
+}
+
+.profile__name {
+  font-size: 1.5em;
+}
+
+.action {
+  grid-column: 3;
+  display: flex;
+  justify-content: space-around;
+}
+
+.action__new-button,
+.action__upload-button,
+.action__share-button {
+  height: 40px;
+  width: 100px;
+  border-radius: 20px;
+  color: aliceblue;
+  background-color: rgb(55, 55, 206);
+  border: none;
+}
+
+/* #endregion header */
+
+/* #region main content */
+
+.main {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  grid-template-rows: 1fr 10fr;
+  gap: 15px;
+  padding: 2%;
+  background-color: rgb(74, 118, 212) ;
+}
+
+.main__project-header,
+.main__announcements-header {
+  margin-top: auto;
+  font-size: 1.5em;
+}
+
+.card {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 15px;
+}
+
+.card__text {
+  padding: 10px;
+  background-color: aliceblue;
+}
+
+.card__header {
+  font-size: 1em;
+}
+
+.card__content {
+
+}
+
+.news {
+  display: grid;
+  gap: 15px;
+  grid-template-rows: 5fr 1fr 5fr;
+}
+
+.announcements {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  padding: 4%;
+  background-color: aliceblue;
+}
+
+
+
+.trending {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  grid-template-rows: repeat(4, 1fr);
+  align-items: center;
+  padding: 4%;
+  background-color: aliceblue;
+}
+
+.trending__profile-image {
+  height: 30px;
+  width: 30px;
+}
+
+.trending__header {
+  margin-top: auto;
+}
+
+.trending__name,
+.announcements__header {
+  font-size: 1em;
+  font-weight: bold;
+}
+
+
+
+
+
+
+/* #endregion main content */
