--- a/style.css
+++ b/style.css
@@ -21,11 +21,10 @@
   padding: 5%;
 }
 
-.nav__list,
-.settings__list,
+.nav,
+.settings,
 .logo {
   padding-bottom: 10%;
-  list-style: none;
 }
 
 .logo__text {
@@ -33,15 +32,15 @@
 }
 
 .logo__image,
-.nav__item-icon,
-.settings__item-icon {
+.nav__icon,
+.settings__icon {
   height: 40px;
   fill: white;
 }
 
 .logo__text,
-.nav__item-text,
-.settings__item-text {
+.nav__text,
+.settings__text {
   padding-left: 5%;
   color: white;
 }
@@ -171,6 +170,13 @@
   padding: 0 2% 4% 2%;
 }
 
+.card__content,
+.announcements,
+.trending {
+  border-radius: 5px;
+}
+
+
 .main__header {
   margin-top: auto;
   font-size: 1.5em;
@@ -182,19 +188,22 @@
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(3, 1fr);
   gap: 15px;
-}
-
-.card__text {
-  padding: 10px;
-  background-color: aliceblue;
-}
-
-.card__header {
-  font-size: 1em;
+  
 }
 
 .card__content {
+  padding: 15px;
+  background-color: aliceblue;
+  box-shadow: 4px 6px 0 rgba(0, 0, 0, 0.2);
+  border-left: 5px solid blue;
+}
 
+.card__header {
+  font-size: 1.2em;
+}
+
+.card__text {
+  
 }
 
 .news {
